# NoAmmo

./: .clangd  CMakeLists.txt  TextHelp.h  Vector2.h  entity.h  main.cpp  player.h  registry.h
buildfiles/: Info.plist  icon.icns  wicon.rc
src/: TextHelp.h  Vector2.h  main.cpp
src/Registry/: entity.cpp  entity.h  player.h  registry.h
